Ensure hearts always align to the top

--- a/src/_scss/_archive.scss
+++ b/src/_scss/_archive.scss
@@ -16,6 +16,7 @@ $archive-gutter-column: 15px;
     padding-left:  5px;
     padding-right: 5px;
     width: 12px;
+    vertical-align: top;
 
     img {
       width: 12px;
